apport (0.59) UNRELEASED; urgency=low

  * apport/report.py: Check that interpreter options are discarded in
    test_check_interpreted_script(). This replicates bug #87005.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Feb 2007 12:07:18 +0100

apport (0.58) feisty; urgency=low

  * qt4/apport-qt.desktop.in  move to System menu

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 20 Feb 2007 11:35:17 +0000

apport (0.57) feisty; urgency=low

  * apport/ui.py: Intercept ENOMEM and fail gracefully; there is little else
    we can do at that point, and there is no point in presenting a crash
    report for this. (LP: #85155)
  * apport/ui.py: Ignore KeyError when deleting the CoreDump field on sending
    a reduced report. This Should Not Happen™, but nevertheless did.
    (LP: #86083)
  * gtk/apport-gtk, qt4/apport-qt: Intercept ImportError for the non-builtin
    Python modules. This usually happens for crashes when there is a
    dist-upgrade active and some Python packages have not been configured yet.
    (LP: #86007)
  * apport/ui.py: If the problem report does not apply to a packaged program,
    and we have an ExecutablePath, mention it in the error message for easier
    debugging.
  * apport/python_hook.py: Resolve symbolic links in ExecutablePath.
    (LP: #85529)
  * apport/ui.py, open_url(): Remove debugging print statement again, now
    that we tracked down bug #83974.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Feb 2007 14:40:29 +0100

apport (0.56) feisty; urgency=low

  * apport/ui.py, open_url(): When being invoked as root, call gnome-open or
    firefox as root through sudo instead of dropping our uid/gid and calling
    it normally. The latter does not work for Firefox for some  mysterious
    reason. Thanks to Mika Fischer for this trick. (LP: #81207)
  * Add debian/local/ubuntu-bug.1: Manpage for ubuntu-bug. Add it to
    debian/apport.manpages.
  * qt4/apport-qt: Add some missing features that are present in the GTK UI: